tests/baselines/reference/contextualTyping12.errors.txt
tests/cases/compiler/contextualTyping12.ts(1,57): error TS2339: Property 'name' does not exist on type '{ id: number; }'.


==== tests/cases/compiler/contextualTyping12.ts (1 errors) ====
    class foo { public bar:{id:number;}[] = [{id:1}, {id:2, name:"foo"}]; }
                                                            ~~~~
!!! error TS2339: Property 'name' does not exist on type '{ id: number; }'.